--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="About Erica Sulewski, Front-end web developer" />
     <link rel="stylesheet" href="style.css" />
     <title>About Erica Sulewski</title>
     <link
@@ -91,7 +92,7 @@
     </div>
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:esulewski2013@gmail.com" class="email-link">
+      <a href="mailto:esulewski2013@gmail.com" title="Email esulewski2013@gmail.com" class="email-link">
         esulewski2013@gmail.com
       </a>
     </div>
