--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Erica Sulewski</title>
+    <meta name="description" content="erica sulewski Front-end web developer
+    <title>Erica Sulewski | Front-end Web Developer</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -70,7 +71,7 @@
             qui alias veniam excepturi rem dolor fugit dignissimos, sed
             voluptatum blanditiis harum.
           </p>
-          <button type="button" class="btn btn-primary">
+          <button type="button" title="Yoda App" class="btn btn-primary">
             Launch Yoga App
           </button>
         </div>
@@ -85,7 +86,7 @@
             qui alias veniam excepturi rem dolor fugit dignissimos, sed
             voluptatum blanditiis harum.
           </p>
-          <button type="button" class="btn btn-primary">
+          <button type="button" title="Weather App" class="btn btn-primary">
             Launch Weather App
           </button>
         </div>
@@ -99,15 +100,15 @@
           <img src="images/yogurt.png" alt="yogurt" class="img-fluid" />
         </div>
         <div class="col-6">
-          <h2>Yogurt app</h2>
+          <h2>Yogurt</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
             aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
             qui alias veniam excepturi rem dolor fugit dignissimos, sed
             voluptatum blanditiis harum.
           </p>
-          <button type="button" class="btn btn-primary">
-            Launch Yogurt App
+          <button type="button" title="Yogurt Web Page" class="btn btn-primary">
+            Launch Yogurt
           </button>
         </div>
       </div>
