--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Erica Sulewski</a>
+        <a class="navbar-brand" href="index.html">Erica Sulewski</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,12 +37,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link" aria-current="page" href="index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link active" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html#contact">Contact</a>
@@ -81,13 +81,13 @@
     </div>
     <div class="d-flex justify-content-evenly">
       <div class="p-2">
-        <img src="images/yoga.png" alt="yoga" class="img-fluid" />
+        <img src="images/yoga.png" alt="yoga" class="img-fluid" class=".d-none .d-md-block" />
       </div>
       <div class="p-2">
-        <img src="images/weather.png" alt="weather" class="img-fluid" />
+        <img src="images/weather.png" alt="weather" class="img-fluid" class=".d-none .d-md-block"/>
       </div>
       <div class="p-2">
-        <img src="images/yogurt.png" alt="yogurt" class="img-fluid" />
+        <img src="images/yogurt.png" alt="yogurt" class="img-fluid"class=".d-none .d-md-block" />
       </div>
     </div>
     <div id="contact">
