--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" alt="yoga" class="img-fluid" />
+          <img src="images/yoga.png" alt="yoga" class="img-fluid" class=".d-none .d-md-block"/>
         </div>
         <div class="col-6">
           <h2>Yoga app</h2>
@@ -91,13 +91,13 @@
           </button>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" alt="weather" class="img-fluid" />
+          <img src="images/weather.png" alt="weather" class="img-fluid" class=".d-none .d-md-block"/>
         </div>
       </div>
 
       <div class="row">
         <div class="col-6">
-          <img src="images/yogurt.png" alt="yogurt" class="img-fluid" />
+          <img src="images/yogurt.png" alt="yogurt" class="img-fluid" class=".d-none .d-md-block"/>
         </div>
         <div class="col-6">
           <h2>Yogurt</h2>
