--- a/about.html
+++ b/about.html
@@ -81,13 +81,13 @@
     </div>
     <div class="d-flex justify-content-evenly">
       <div class="p-2">
-        <img src="images/yoga.png" alt="yoga" class="img-fluid" class=".d-none .d-md-block" />
+        <img src="images/yoga.png" alt="yoga" class="img-fluid" />
       </div>
       <div class="p-2">
-        <img src="images/weather.png" alt="weather" class="img-fluid" class=".d-none .d-md-block"/>
+        <img src="images/weather.png" alt="weather" class="img-fluid"/>
       </div>
       <div class="p-2">
-        <img src="images/yogurt.png" alt="yogurt" class="img-fluid"class=".d-none .d-md-block" />
+        <img src="images/yogurt.png" alt="yogurt" class="img-fluid" />
       </div>
     </div>
     <div id="contact">
