making  img responsive

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
 
       <div class="row">
-        <div class="col-6">
+        <div class="col-6 picture">
           <h2>Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -90,13 +90,13 @@
             Launch Weather App
           </button>
         </div>
-        <div class="col-6">
+        <div class="col-6 picture">
           <img src="images/weather.png" alt="weather" class="img-fluid"/>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-6">
+        <div class="col-6 picture">
           <img src="images/yogurt.png" alt="yogurt" class="img-fluid"/>
         </div>
         <div class="col-6">
